fix(common.scss): test broken layout

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,10 +1,5 @@
 html {
   min-width: 320px;
-  overflow-x: auto;
-}
-
-[class^='container-'] {
-  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
